--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,39 @@
+html {
+  height: 100%;
+  min-height: 100%; }
+
+body {
+  height: 100%;
+  min-height: 100%; }
+
+#root {
+  height: 100%;
+  min-height: 100%; }
+
+#main-wrapper {
+  height: 100%;
+  min-height: 100%; }
+
+#content-wrapper {
+  width: 100%; }
+  #content-wrapper .content-dynamic {
+    padding: 1em; }
+
+#sidebar {
+  height: 100%;
+  min-height: 100%;
+  background: #f9f9f9;
+  border-right: 1px solid #eee; }
+  #sidebar .sidebar-title {
+    padding: 0.8em;
+    font-size: 1.1em; }
+  #sidebar .list-group {
+    width: 15em; }
+    #sidebar .list-group .list-group-item {
+      background: #f9f9f9;
+      border: none;
+      border-radius: 0; }
+
 body.bg-blue {
   background: #499bea;
   background: -moz-linear-gradient(left, #499bea 0%, #207ce5 100%);
@@ -6,4 +42,4 @@ body.bg-blue {
   background: -o-linear-gradient(left, #499bea 0%, #207ce5 100%);
   background: -ms-linear-gradient(left, #499bea 0%, #207ce5 100%);
   background: linear-gradient(to right, #499bea 0%, #207ce5 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#207ce5', GradientType=1 ); }
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#499bea', endColorstr='#207ce5', GradientType=1); }
