corrigindo o layout do header, usando class. removendo o mr-auto que não identava o tootgle

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -14,9 +14,9 @@ body {
   height: 100%;
   min-height: 100%; }
 
-#content-wrapper {
+.content-wrapper {
   width: 100%; }
-  #content-wrapper .content-dynamic {
+  .content-wrapper .content-dynamic {
     padding: 1em; }
 
 #sidebar {
