aplicando transição no momento de clicar no toggle do adm

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -19,11 +19,17 @@ body {
   .content-wrapper .content-dynamic {
     padding: 1em; }
 
+/** aplicando o toggle */
+#main-wrapper.toggled #sidebar {
+  margin-left: 0; }
+
 #sidebar {
   height: 100%;
   min-height: 100%;
   background: #f9f9f9;
-  border-right: 1px solid #eee; }
+  margin-left: -15em;
+  border-right: 1px solid #eee;
+  transition: margin .25s ease-in-out; }
   #sidebar .sidebar-title {
     padding: 0.8em;
     font-size: 1.1em; }
