--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -25,11 +25,18 @@ body {
   }
 }
 
+/** aplicando o toggle */
+#main-wrapper.toggled #sidebar{
+  margin-left: 0;
+}
+
 #sidebar {
   height: 100%;
   min-height: 100%;
   background: #f9f9f9;
+  margin-left: -15em;
   border-right: 1px solid #eee;
+  transition: margin .25s ease-in-out;
   .sidebar-title {
     padding: 0.8em;
     font-size: 1.1em;
